Fixed padding for button

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="col-12">
                 <div class="col-10 offset-1">
                     <h2 class=" fw-bold text-uppercase sp-red sp-line-under mb-2">Par Public </h2>
-                    <p class="my-5">
+                    <p class="my-5 text-justify">
                         Physical space is often conceived in three linear dimensions, although modern physicists usually
                         consider it, with time, to be part of a boundless four-dimensional continuum known as spacetime.
                         The concept of space is considered to be of fundamental importance to an understanding of the
@@ -202,7 +202,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -218,7 +218,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -234,7 +234,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class="d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link sp-btn-danger">En
+                                                class="d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link sp-btn-danger">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -250,7 +250,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -266,7 +266,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -282,7 +282,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -303,7 +303,7 @@
             <div class="col-12 px-0">
                 <div class="col-10 offset-1">
                     <h2 class=" fw-bold text-uppercase sp-red sp-line-under mb-2">Par Parcours </h2>
-                    <p class="my-5">
+                    <p class="my-5 text-justify">
                         Physical space is often conceived in three linear dimensions, although modern physicists usually
                         consider it, with time, to be part of a boundless four-dimensional continuum known as spacetime.
                         The concept of space is considered to be of fundamental importance to an understanding of the
@@ -397,7 +397,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -413,7 +413,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -429,7 +429,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class="d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link sp-btn-danger">En
+                                                class="d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link sp-btn-danger">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -445,7 +445,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -461,7 +461,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -477,7 +477,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -499,7 +499,7 @@
             <div class="col-12 px-0 me-0">
                 <div class="col-10 offset-1">
                     <h2 class=" fw-bold text-uppercase sp-red sp-line-under mb-2">En Partenariat </h2>
-                    <p class="my-5">
+                    <p class="my-5 text-justify">
                         Physical space is often conceived in three linear dimensions, although modern physicists usually
                         consider it, with time, to be part of a boundless four-dimensional continuum known as spacetime.
                         The concept of space is considered to be of fundamental importance to an understanding of the
@@ -535,8 +535,7 @@
                                         quaerat blanditiis inventore, iusto, ut accusamus!
                                     </p>
                                     <a href="#"
-                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
-                                        savoir plus</a>
+                                        class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
                                 </div>
                             </div>
                         </div>
@@ -568,8 +567,7 @@
                                         l’exercice du métier
                                     </p>
                                     <a href="#"
-                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
-                                        savoir plus</a>
+                                        class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
                                 </div>
                             </div>
                         </div>
@@ -596,8 +594,7 @@
                                         quaerat blanditiis inventore, iusto, ut accusamus!
                                     </p>
                                     <a href="#"
-                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
-                                        savoir plus</a>
+                                        class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
                                 </div>
                             </div>
                         </div>
