Adding search bar in navbar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 <body>
     <!-- header -->
-
     <header>
         <nav class="navbar navbar-expand-lg bg-white fw-bold">
             <div class="container">
@@ -49,7 +48,13 @@
                             <a class="nav-link " href="">Entites</a>
                         </li>
                     </ul>
-                    <form class="d-flex flex-column flex-md-row flex-sm-column">
+                    <form class="d-flex flex-column flex-md-row flex-sm-column align-items-md-center">
+                        <label for="search" class="d-flex align-items-center justify-content-center   rounded rounded-pill">
+                            <input class="border-0  mw-100" type="search" placeholder="Search" aria-label="Search" name="search">
+                            <i class="bi bi-search " aria-hidden="true"></i>
+                        </label>
+                        
+
                         <div class="dropdown mx-sm-0 mx-sm-1 nav-item ">
                             <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
@@ -78,7 +83,7 @@
             <figcaption class="position-absolute">Formations</figcaption>
         </figure>
         <!-- barre de recherche -->
-        <div class="row justify-content-center my-4">
+        <div class="row justify-content-center">
             <div class="col-sm-8 col-md-6">
                 <div class="input-group my-3">
                     <input type="text" class="form-control sp-input-shadow" placeholder="Rechercher une formation"
@@ -89,7 +94,7 @@
             </div>
         </div>
         <!-- Section public -->
-        <section class="row justify-content-center row-secondary public-section">
+        <section class="row mb-3 justify-content-center row-secondary public-section">
             <!-- Public title -->
             <div class="col-12">
                 <div class="col-10 offset-1">
@@ -121,6 +126,7 @@
                                 </span>
                                 Femme
                             </p>
+
                             <p
                                 class="align-items-center d-flex p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                 <span class="d-flex align-items-center">
@@ -202,7 +208,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -218,7 +224,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -234,7 +240,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class="d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link sp-btn-danger">En
+                                                class="d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link sp-btn-danger">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -250,7 +256,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -266,7 +272,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -282,7 +288,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -298,7 +304,7 @@
             </div>
         </section>
         <!-- Section parcours -->
-        <section class="row justify-content-center row-secondary parcours-section">
+        <section class="row mb-3 justify-content-center row-secondary parcours-section">
             <!-- Parcours title -->
             <div class="col-12 px-0">
                 <div class="col-10 offset-1">
@@ -397,7 +403,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -413,7 +419,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -429,7 +435,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class="d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link sp-btn-danger">En
+                                                class="d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link sp-btn-danger">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -445,7 +451,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -461,7 +467,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -477,7 +483,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -535,7 +541,7 @@
                                         quaerat blanditiis inventore, iusto, ut accusamus!
                                     </p>
                                     <a href="#"
-                                        class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
+                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
                                 </div>
                             </div>
                         </div>
@@ -567,7 +573,7 @@
                                         l’exercice du métier
                                     </p>
                                     <a href="#"
-                                        class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
+                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
                                 </div>
                             </div>
                         </div>
@@ -594,7 +600,7 @@
                                         quaerat blanditiis inventore, iusto, ut accusamus!
                                     </p>
                                     <a href="#"
-                                        class=" d-inline-block my-2  sp-text-sm  px-3 py-2 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
+                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
                                 </div>
                             </div>
                         </div>
