Handling  active bar menu  per section on desktop

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <div class="left-bloc my-4 d-flex align-items-center  align-items-sm-start ">
                                 <div class="vertical-bar">
                                 </div>
-                                <div class="menu flex-column" style="border: 0ch;">
+                                <div class="menu flex-column menu-public" style="border: 0ch;">
                                     <p
                                         class="active align-items-center d-flex my-4 p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                         <span class="d-flex align-items-center">
@@ -358,7 +358,7 @@
                             <div class="left-bloc my-4 d-flex align-items-center  align-items-sm-start  ">
                                 <div class="vertical-bar">
                                 </div>
-                                <div class="menu flex-column">
+                                <div class="menu flex-column menu-parcours">
                                     <p
                                         class="active align-items-center d-flex my-4 p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                         <span class="d-flex align-items-center">
