Fixied Active link bar in navbar and adding my-1 to more button in card

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </nav>
     </header>
     <main class="container-fluid ">
-        <figure class="">
+        <figure >
             <img src="./formations/img/formationsproBestResolution.jpg" alt="Banner" class="img-fluid">
             <figcaption class="position-absolute">Formations</figcaption>
         </figure>
@@ -208,7 +208,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -224,7 +224,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -240,7 +240,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class="d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link sp-btn-danger">En
+                                                class="d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link sp-btn-danger">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -256,7 +256,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -272,7 +272,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -288,7 +288,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -403,7 +403,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -419,7 +419,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -435,7 +435,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class="d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link sp-btn-danger">En
+                                                class="d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link sp-btn-danger">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -451,7 +451,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -467,7 +467,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -483,7 +483,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -541,7 +541,7 @@
                                         quaerat blanditiis inventore, iusto, ut accusamus!
                                     </p>
                                     <a href="#"
-                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
+                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
                                 </div>
                             </div>
                         </div>
@@ -573,7 +573,7 @@
                                         l’exercice du métier
                                     </p>
                                     <a href="#"
-                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
+                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
                                 </div>
                             </div>
                         </div>
@@ -600,7 +600,7 @@
                                         quaerat blanditiis inventore, iusto, ut accusamus!
                                     </p>
                                     <a href="#"
-                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-2 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
+                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">Decouvrir la formation</a>
                                 </div>
                             </div>
                         </div>
