Fixed corresponding between label and input for search input in the header

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </ul>
                     <form class="d-flex flex-column flex-md-row flex-sm-column align-items-md-center">
                         <label for="search" class="d-flex align-items-center justify-content-center   rounded rounded-pill">
-                            <input class="border-0  mw-100" type="search" placeholder="Search" aria-label="Search" name="search">
+                            <input class="border-0 mw-100" id="search" type="search" placeholder="Search" aria-label="Search" name="search">
                             <i class="bi bi-search " aria-hidden="true"></i>
                         </label>
                         
